--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -17,7 +17,7 @@ extra_css:
 nav:
   - Home: index.md
   - Patch Notes: patchnotes.md
-  # - Beta Versions: beta.md
+  - Beta Versions: beta.md
   - Documentation: 
     - "Introduction": "docs.md"
     - "Client":
