--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -43,6 +43,7 @@ nav:
       - "Mod": "Documentation/Utilities/Mod.md"
       - "Net": "Documentation/Utilities/Net.md"
       - "Timer": "Documentation/Utilities/Timer.md"
+      - "Text": "Documentation/Utilities/Text.md"
       - "Vector": "Documentation/Utilities/Vector.md"
   #   - "Global Tables":
   #     - "Feature": "Global Tables/Feature.md"
