--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
   - Features:
     - "UI improvements": "Features/UI.md"
     - "Vanity": "Features/Vanity.md"
+  - FAQ: Info/faq.md
   - Documentation: 
     - "Introduction": "docs.md"
     - "Client":
