Add Hotbar feature page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
   - FAQ: Info/faq.md
   - Features:
     - "UI improvements": "Features/UI.md"
+    - "Hotbar": "Features/Hotbar.md"
     - "Vanity": "Features/Vanity.md"
   - Documentation: 
     - "Introduction": "docs.md"
