--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -12,6 +12,8 @@ markdown_extensions:
     # - pymdownx.superfences
     - attr_list
     - md_in_html
+plugins:
+    - mkdocs-video
 
 extra_css:
   - css/extra.css
