--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
   - Features:
     - "UI improvements": "Features/UI.md"
     - "Vanity": "Features/Vanity.md"
+    - "Camera": "Features/Camera.md"
   - Documentation: 
     - "Introduction": "docs.md"
     - "Terminology": "Documentation/Terminology.md"
