--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,6 +1,9 @@
 site_name: Epip Encounters
 site_url: https://pinewood.team/epip/
-theme: readthedocs
+theme:
+  name: readthedocs
+  collapse_navigation: true
+  navigation_depth: 3
 markdown_extensions:
     - pymdownx.highlight:
         anchor_linenums: true
@@ -12,7 +15,6 @@ markdown_extensions:
     # - pymdownx.superfences
     - attr_list
     - md_in_html
-
 extra_css:
   - css/extra.css
 
@@ -29,34 +31,33 @@ nav:
     - "Introduction": "docs.md"
     - "Terminology": "Documentation/Terminology.md"
     - "Important Tables": "Documentation/Global Tables/Epip.md"
-    - "Client":
-      - "Pointer": "Documentation/Client/Pointer.md"
-      - Generic UI:
-        - Introduction: "Documentation/Client/UI/Generic/Introduction.md"
-        - Elements:
-          - Element: "Documentation/Client/UI/Generic/Elements/Element.md"
-          - Button: "Documentation/Client/UI/Generic/Elements/Button.md"
-          - Color: "Documentation/Client/UI/Generic/Elements/Color.md"
-          - ComboBox: "Documentation/Client/UI/Generic/Elements/ComboBox.md"
-    - "Utilities":
-      - "Artifact": "Documentation/Utilities/Artifact.md"
-      - "Character": "Documentation/Utilities/Character.md"
-      - "Color": "Documentation/Utilities/Color.md"
-      - "Combat": "Documentation/Utilities/Combat.md"
-      - "GameState": "Documentation/Utilities/GameState.md"
-      - "Item": "Documentation/Utilities/Item.md"
-      - "Mod": "Documentation/Utilities/Mod.md"
-      - "Net": "Documentation/Utilities/Net.md"
-      - "Timer": "Documentation/Utilities/Timer.md"
-      - "Text": "Documentation/Utilities/Text.md"
-      - "Vector": "Documentation/Utilities/Vector.md"
-      - "OOP": "Documentation/Utilities/OOP.md"
-      - "Library": "Documentation/Utilities/Library.md"
-      - "IO": "Documentation/Utilities/IO.md"
-      - "Coroutine": "Documentation/Utilities/Coroutine.md"
-      - "UserVars": "Documentation/Utilities/UserVars.md"
-      - "Texture": "Documentation/Utilities/Texture.md"
-      - "Pointer": "Documentation/Utilities/Pointer.md"
+  - Client:
+    - "Pointer": "Documentation/Client/Pointer.md"
+  - Generic UI:
+    - Introduction: "Documentation/Client/UI/Generic/Introduction.md"
+    - Element: "Documentation/Client/UI/Generic/Elements/Element.md"
+    - Button: "Documentation/Client/UI/Generic/Elements/Button.md"
+    - Color: "Documentation/Client/UI/Generic/Elements/Color.md"
+    - ComboBox: "Documentation/Client/UI/Generic/Elements/ComboBox.md"
+  - "Utilities":
+    - "Artifact": "Documentation/Utilities/Artifact.md"
+    - "Character": "Documentation/Utilities/Character.md"
+    - "Color": "Documentation/Utilities/Color.md"
+    - "Combat": "Documentation/Utilities/Combat.md"
+    - "GameState": "Documentation/Utilities/GameState.md"
+    - "Item": "Documentation/Utilities/Item.md"
+    - "Mod": "Documentation/Utilities/Mod.md"
+    - "Net": "Documentation/Utilities/Net.md"
+    - "Timer": "Documentation/Utilities/Timer.md"
+    - "Text": "Documentation/Utilities/Text.md"
+    - "Vector": "Documentation/Utilities/Vector.md"
+    - "OOP": "Documentation/Utilities/OOP.md"
+    - "Library": "Documentation/Utilities/Library.md"
+    - "IO": "Documentation/Utilities/IO.md"
+    - "Coroutine": "Documentation/Utilities/Coroutine.md"
+    - "UserVars": "Documentation/Utilities/UserVars.md"
+    - "Texture": "Documentation/Utilities/Texture.md"
+    - "Pointer": "Documentation/Utilities/Pointer.md"
   #   - "Global Tables":
   #     - "Feature": "Global Tables/Feature.md"
   #   - "Game":
