Add dedicated Tooltip Adjustments page, update list of adjustments

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,6 +27,7 @@ nav:
     - "UI improvements": "Features/UI.md"
     - "Vanity": "Features/Vanity.md"
     - "Camera": "Features/Camera.md"
+    - "Tooltip Adjustments": "Features/TooltipAdjustments.md"
   - Documentation: 
     - "Introduction": "docs.md"
     - "Terminology": "Documentation/Terminology.md"
