Add Vanilla Fixes dedicated page
For fixes and small features that don't really belong anywhere else

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -28,6 +28,7 @@ nav:
     - "Vanity": "Features/Vanity.md"
     - "Camera": "Features/Camera.md"
     - "Tooltip Adjustments": "Features/TooltipAdjustments.md"
+    - "Vanilla Fixes": "Features/VanillaFixes.md"
   - Documentation: 
     - "Introduction": "docs.md"
     - "Terminology": "Documentation/Terminology.md"
