--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,6 +14,7 @@ markdown_extensions:
     - pymdownx.inlinehilite
     - pymdownx.snippets
     - pymdownx.superfences
+    - pymdownx.keys
     - admonition
     - attr_list
     - md_in_html
