--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -29,6 +29,10 @@ extra_javascript:
 plugins:
   - search
   - meta-descriptions
+  - mkdocs-video:
+      css_style:
+        height: "400px"
+        width: "100%"
 
 nav:
   - Home: index.md
@@ -39,6 +43,7 @@ nav:
     - "UI improvements": "Features/UI.md"
     - "Vanity": "Features/Vanity.md"
     - "Quick Find": "Features/QuickFind.md"
+    - "Animation Cancelling": "Features/AnimationCancelling.md"
     - "Camera": "Features/Camera.md"
     - "Tooltip Adjustments": "Features/TooltipAdjustments.md"
     - "Vanilla Fixes": "Features/VanillaFixes.md"
