--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,7 +40,7 @@ nav:
   - Beta Versions: beta.md
   - FAQ: Info/faq.md
   - Major Features:
-    - "UI improvements": "Features/UI.md"
+    - "UI Improvements": "Features/UI.md"
     - "Vanity": "Features/Vanity.md"
     - "Quick Find": "Features/QuickFind.md"
     - "Animation Cancelling": "Features/AnimationCancelling.md"
