--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -44,6 +44,7 @@ nav:
     - "Vanity": "Features/Vanity.md"
     - "Quick Find": "Features/QuickFind.md"
     - "Animation Cancelling": "Features/AnimationCancelling.md"
+    - "Hotbar Groups": "Features/HotbarGroups.md"
     - "Camera": "Features/Camera.md"
     - "Tooltip Adjustments": "Features/TooltipAdjustments.md"
     - "Vanilla Fixes": "Features/VanillaFixes.md"
