Add more intuitive key names for mouse buttons
By default they are called ex. "Left Button", which can be confusing.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,7 +14,14 @@ markdown_extensions:
     - pymdownx.inlinehilite
     - pymdownx.snippets
     - pymdownx.superfences
-    - pymdownx.keys
+    - pymdownx.keys:
+        key_map: {
+          "m1": "Left Mouse Button",
+          "m2": "Right Mouse Button",
+          "m3": "Middle Mouse Button",
+          "m4": "Mouse M4",
+          "m5": "Mouse M5",
+        }
     - admonition
     - attr_list
     - md_in_html
