Add project setup page

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -116,6 +116,7 @@ nav:
       - "Testing": "Tutorials/testing.md"
     - Maintenance:
       - "Index": "Maintenance/index.md"
+      - "Project Setup": Maintenance/ProjectSetup.md
       - "IDE Setup": "Maintenance/IDESetup.md"
       - "Localization": "Maintenance/localization.md"
       - "Documentation": "Maintenance/documentation.md"
