--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,7 @@ nav:
     - "Hotbar Groups": "Features/HotbarGroups.md"
     - "Settings Menu": "Features/SettingsMenu.md"
     - "Animation Cancelling": "Features/AnimationCancelling.md"
+    - "Epic Encounters QoL": "Features/EpicEncountersQoL.md"
     - "Camera": "Features/Camera.md"
     - "Tooltip Adjustments": "Features/TooltipAdjustments.md"
     - "Codex": "Features/Codex.md"
