--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,8 +4,8 @@ theme:
   name: material
   collapse_navigation: false
   navigation_depth: 3
-  logo: img/tpw_logo_purple.png
-  favicon: img/tpw_logo_purple.png
+  logo: img/epipe.png
+  favicon: img/epipe.png
 markdown_extensions:
     - pymdownx.highlight:
         anchor_linenums: true
