Add docs for minor features and changes from v1072
Also added a "Miscellaneous QoL" page for minor features that were previously undocumented; not yet complete.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -63,6 +63,7 @@ nav:
     - "Vanilla Fixes": "Features/VanillaFixes.md"
     - "Controller Support": "Features/ControllerSupport.md"
     - "Radial Menus": "Features/RadialMenus.md"
+    - "Miscellaneous QoL": "Features/MiscellaneousQoL.md"
   - Technical Documentation: 
     - "Introduction": "docs.md"
     - "Terminology": "Documentation/Terminology.md"
